--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -2,15 +2,15 @@
     padding: 2rem;
 
     @include breakpoint-up(medium) {
-        padding: 4.75rem 3rem;
+        padding: 4.75rem 3rem 8rem;
     }
 
     @include breakpoint-up(large) {
-        padding: 4.75rem 6rem;
+        padding: 4.75rem 6rem 8.5rem;
     }
 
     @include breakpoint-up(xlarge) {
-        padding: 4.75rem 10.5rem;
+        padding: 4.75rem 10.5rem 8.5rem;
     }
 }
 
