--- a/styles/scss/_hero.scss
+++ b/styles/scss/_hero.scss
@@ -8,7 +8,16 @@
     background-repeat: no-repeat;
 
     @include breakpoint-up(medium) {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 40vw;
         height: 100%;
         background-image: url('/images/hero-desktop.jpg');
+    }
+
+    @include breakpoint-up(large) {
+        width: 42vw;
     }
 }
